pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__162-html_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/162-html_blocks.md
---
[32m<a href="foo">
[0m[32m*bar*
[0m[32m</a>
[0m
