pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec__164-html_blocks.md.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 158
expression: "replace_system_specific_urls(render_to_string(markdown_file, &ansi_settings))"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/164-html_blocks.md
---
[32m<i class="foo">
[0m[32m*bar*
[0m[32m</i>
[0m
